--- a/upperboard/src/vga_pal/VGA_PAL.qsf
+++ b/upperboard/src/vga_pal/VGA_PAL.qsf
@@ -41,10 +41,9 @@ set_global_assignment -name DEVICE "EPM3128ATC100-10"
 set_global_assignment -name TOP_LEVEL_ENTITY VGA_PAL
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 9.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "11:17:07  JULY 22, 2009"
-set_global_assignment -name LAST_QUARTUS_VERSION 9.0
+set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name USE_GENERATED_PHYSICAL_CONSTRAINTS OFF -section_id eda_blast_fpga
 set_global_assignment -name DEVICE_FILTER_PACKAGE "ANY QFP"
-set_global_assignment -name VHDL_FILE VGA_PAL.vhd
 set_global_assignment -name SMART_RECOMPILE ON
 set_global_assignment -name MAX7000_DEVICE_IO_STANDARD "3.3-V LVTTL"
 set_location_assignment PIN_1 -to B_IN
@@ -58,7 +57,6 @@ set_location_assignment PIN_14 -to A[11]
 set_location_assignment PIN_16 -to A[12]
 set_location_assignment PIN_17 -to A[13]
 set_location_assignment PIN_19 -to A[14]
-set_global_assignment -name MISC_FILE "C:/WORKSPACE/QUARTUS/VGA_PAL/VGA_PAL.dpf"
 set_location_assignment PIN_20 -to D[8]
 set_location_assignment PIN_21 -to D[9]
 set_location_assignment PIN_22 -to D[10]
@@ -104,7 +102,6 @@ set_location_assignment PIN_92 -to VGA_SCART
 set_location_assignment PIN_93 -to INVERSE_F14MHZ
 set_location_assignment PIN_94 -to INVERSE_SSI
 set_location_assignment PIN_96 -to INVERSE_KSI
-set_location_assignment PIN_97 -to INVERSE_RGBI
 set_location_assignment PIN_98 -to SSI_IN
 set_location_assignment PIN_99 -to KSI_IN
 set_location_assignment PIN_100 -to I_IN
@@ -115,7 +112,6 @@ set_global_assignment -name MAXII_OPTIMIZATION_TECHNIQUE AREA
 set_global_assignment -name MAX7000_OPTIMIZATION_TECHNIQUE AREA
 set_global_assignment -name APEX20K_OPTIMIZATION_TECHNIQUE AREA
 set_location_assignment PIN_87 -to F14
-set_global_assignment -name MISC_FILE "D:/WORKSPACE/QUARTUS/VGA_PAL/VGA_PAL.dpf"
 set_global_assignment -name RTLV_GROUP_RELATED_NODES OFF
 set_global_assignment -name AUTO_PARALLEL_EXPANDERS OFF
 set_global_assignment -name IGNORE_LCELL_BUFFERS ON
@@ -127,5 +123,10 @@ set_location_assignment PIN_12 -to I_VIDEO[0]
 set_location_assignment PIN_63 -to I_VGA[0]
 set_location_assignment PIN_67 -to I_VGA[1]
 set_location_assignment PIN_69 -to I_VGA[2]
-set_global_assignment -name VECTOR_WAVEFORM_FILE VGA_PAL.vwf
 set_location_assignment PIN_81 -to F14_2
+set_location_assignment PIN_97 -to F0_SELECTOR
+set_global_assignment -name OPTIMIZE_HOLD_TIMING OFF
+set_global_assignment -name OPTIMIZE_MULTI_CORNER_TIMING OFF
+set_global_assignment -name FITTER_EFFORT "STANDARD FIT"
+set_global_assignment -name VHDL_FILE VGA_PAL.vhd
+set_global_assignment -name VECTOR_WAVEFORM_FILE VGA_PAL.vwf
